# 24-na-7

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .scope-fence.md  API_KEYS_SETUP.md  AUDIT_REPORT_2026_01.md  AUDIT_REPORT_PRESENTATION.md  AUTONOMOUS_CYCLE_VERIFICATION_REPORT.md  AUTO_GOVERNANCE_GUIDE.md  BRIGHTDATA_PROXY_SETUP.md  CLAUDE.md  Caddyfile  DB_MIGRATION_REPORT.md  DIGEST.md  Dockerfile.api  Dockerfile.worker  ENV_SETUP_INSTRUCTIONS.md  FILTERS.md  FINAL_AUDIT_PROGRESS.md  FINAL_LOCK_IN_REPORT.md  FINAL_VERIFICATION_CHECKLIST.md  FIRST_LAUNCH_GUIDE.md  FIRST_OSINT_MISSION_GUIDE.md  FULL_AUDIT_SPEC.md  INIT_PLAYBOOK_CHANGELOG.md  LEVEL5_UPGRADE_GUIDE.md  LEVEL5_VALIDATION_GUIDE.md  LOCAL_SETUP_GUIDE.md  M1_M2_COMPLETE_SUMMARY.md  MCP_CONFIG_VALIDATION_GUIDE.md  MCP_INTELLIGENCE_SETUP.md  MEMORY_CONTRACT.md  Makefile  OSINT_KDS_GUIDE.md  PRODUCTION_LAUNCH_CHECKLIST.md  PRODUCTION_RELEASE_SUMMARY.md  PRODUCTION_WEEK_1_SECURITY.md  PROD_LAUNCH_REPORT.md  PROD_UPGRADE_PROGRESS.md  (+39 more)
.claude/: settings.local.json
.cursor/: hooks.json  mcp.json
.github/: CODEOWNERS
android/: LOG_README.md  README.md  capture-logcat.ps1  gradle.properties  install-fresh.ps1  local.properties  settings.gradle.kts
config/: asr.yaml
digests/: digest_2026-01-01.json  digest_2026-01-01.md  digest_2026-01-15.md  digest_2026-02-01.md  digest_2026-02-06.md  digest_2026-02-07.md  digest_2026-02-24.md  digest_2026-02-25.json  digest_2026-02-25.md  digest_2026-02-26.json  digest_2026-02-26.md  digest_2026-03-02.json  digest_2026-03-02.md  digest_2026-03-03.json  digest_2026-03-03.md  digest_2026-03-06.md  digest_2026-03-07.json  digest_2026-03-07.md  digest_2026-03-08.json  digest_2026-03-08.md
docs/: ANDROID_APP_FLOW.md  ANDROID_APP_ROADMAP.md  ANDROID_OVERVIEW.md  ANDROID_SESSION_SUMMARY.md  ANDROID_WEEK_3_VAD_PLAN.md  AUDITOR_CURSOR_SYSTEM_PROMPT_v2.4.md  AUDIT_RECOMMENDATIONS_COMPLETED.md  AUDIT_REPORT_REFLEXIO_2025.md  AUDIT_TRAIL_SPEC.md  AUTO_MEASUREMENT_GUIDE.md  BASELINE_METRICS.md  BEST_PRACTICES_WHY_502_AND_HOW_OTHERS_AVOID.md  BRANCH_PROTECTION_SETUP.md  CHECKLIST_AUDIT_FIXES.md  COMPLETION_REPORT.md  CURSOR_METHOD_PLAYBOOK.md  Changelog.md  DAILY_DIGEST_EXAMPLE.md  DEPLOYMENT.md  E2E_CHECKLIST.md  FINAL_IMPROVEMENTS_REPORT.md  FINAL_INTEGRATION_SPRINT_REPORT.md  FULL_REPORT_AND_SETUP.md  IMPROVEMENTS_REPORT.md  INTEGRATION_SPRINT_COMPLETE.md  INTEGRATION_SPRINT_EXECUTIVE_SUMMARY.md  INTEGRATION_SPRINT_FINAL_REPORT.md  INTEGRATION_SPRINT_PROGRESS.md  INTEGRATION_SPRINT_START_REPORT.md  INTEGRATION_SPRINT_SUMMARY.md  INTEGRATION_SPRINT_SUMMARY_RU.md  INTEGRATION_SPRINT_TASK.md  INTEGRATION_SPRINT_UPDATE.md  OZERO_RESULT_ACHIEVED.md  PRODUCTION_FINAL_CHECKLIST.md  PRODUCTION_READINESS.md  PRODUCTION_REMAINING_TASKS.md  PROJECT_STATUS_ASSESSMENT.md  PROJECT_VISION.md  PROMETHEUS_SETUP.md  (+26 more)
observability/: alert_rules.yml  prometheus.yml
scripts/: auto_measure.py  auto_optimize.py.skeleton  backfill_memory_contract.py  backup_supabase.sh  benchmark_memory_pipeline.py  cascade_quality.py  check_api_keys.py  check_mcp_health.py  check_methodology_integrity.py  check_osint_readiness.py  check_recordings_count.py  check_server_state.py  compare_projects.py  daily_digest_cron.py  db_init.py  deploy_vps.sh  export_openapi.py  final_verification.ps1  final_verification.sh  first_launch.ps1  first_launch.sh  generate_digest.py  install_windows_service.bat  measure_baseline.py  measure_metrics.py  metrics_snapshot.py  migrate_to_sqlcipher.py  migrate_to_vault.py  prod_activation.sh  prod_verification.py  proxy_diagnostics.py  run_api.bat  run_api.sh  run_listener.bat  run_listener.sh  scheduler.py  serp_diagnostics.py  setup_local_reflexio.ps1  smoke_ingest.py  smoke_llm.py  (+19 more)
src/: __init__.py
tasks/: reflexio_surpass_smart_noter.md
tests/: .report.json  __init__.py  conftest.py  test_80_final_14_lines.py  test_alerting.py  test_api.py  test_health.py  (+39 more)
(+436 files in other folders)
